# enigma2

./: .clang-format  .cvsignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  BoxBrandingTest.py  COPYING  ChangeLog  Doxyfile.doxy  Fix-CD-With-more-than-9-tracks.patch  GlobalActions.py  LICENSE  Makefile.am  Navigation.py  NavigationInstance.py  PowerManagerTimer.py  PowerTimer.py  README  README.md  RecordTimer.py  RecordTimer.py.rej  Rules-cpp.mak  ServiceReference.py  SleepTimer.py  TODO  acinclude.m4  autogen.sh  bouquets.tv  components.py  config.h.in  configure-bw  configure.ac  debug  debug.gdb  doxy.conf  e2reactor.py  el.po  enigma2.bb  enigma2.pc.in  (+22 more)
data/: CommonSkin.xml  Makefile.am  Skin_ExtPlugins.xml  black.mvi  convert-iso-639-3.py  defaultsatlists.xml  defaultwizard.xml  dnsservers.xml  dreampackagewizard.xml  encoding.conf  freesat.t1  freesat.t2  groupedservices  hd-testcard.mvi  imagewizard.xml  iso-639-3.tab  keymap.ntr  keymap.u80  keymap.xml  keytranslation.xml  languages.lst  menu.xml  networkdaemons.xml  otv_00820000_fbff_16a8.dict  otv_011a0000_0002_07d4.dict  otv_06180000_1000_0011.dict  otv_06400000_00a9_0003.dict  radio-hd.mvi  radio-sd.mvi  radio.mvi  rcpositions.xml  setup.xml  skin.xml  skin_default.xml  skin_display.xml  skin_display128.xml  skin_display220_no_picon.xml  skin_display220_picon.xml  skin_display255_no_picon.xml  skin_display255_picon.xml  (+24 more)
data/7segment/: Makefile.am  skin_display.xml
data/LCDIcons/: Makefile.am
data/countries/: Makefile.am
data/defaults/: Makefile.am  bouquets.tv  interfaces  pm_timers.xml  settings  terrestrial.xml  timezone-aus.xml  userbouquet.favourites.tv  userbouquet.terrestrial_lcn.tv
data/display128/: Makefile.am  skin_display.xml
data/display128dm/: skin_display.xml  skin_display_picon.xml
data/display140/: skin_display.xml
data/display220/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display240/: skin_display.xml  skin_display_picon.xml
data/display255/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display390/: skin_display.xml  skin_display_picon.xml
data/display400/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display480/: skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display720/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display800/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display96/: Makefile.am  skin_display.xml
data/displaydualtext/: Makefile.am  skin_display.xml
data/displaytext/: Makefile.am  skin_display.xml  skin_display_alternate.xml  skin_led.xml
data/dm800se/: Makefile.am  skin.xml
data/extensions/: Makefile.am
data/factoryReset/: 50-enigma2  Makefile.am
data/fonts/: Makefile.am  ae_AlMateen.license
data/gbipbox/: Makefile.am  startwizard.xml
data/grautec70x0/: Makefile.am  skin_display_grautec.xml
data/grautec8000/: skin_display_grautec.xml
data/hw_info/: Makefile.am  hw_info.cfg
data/icons/: Makefile.am
data/keymaps/: Makefile.am  azerty.info  azerty.kmap  de.info  default.info  dream-de.info  dream-de.kmap  eng.info  eng.kmap  keyboards.xml  qwertz.kmap  us.info  us.kmap  usb-de.info  usb-qwertz.kmap  usb-us.info  usb-us.kmap
data/lcd/: Makefile.am
data/lcd_large/: Makefile.am
data/lcd_skin220/: clock_lcd_analog.xml  clock_lcd_analog_blue.xml  clock_lcd_analog_gb.xml  clock_lcd_analog_rail.xml  clock_lcd_analog_red.xml  clock_lcd_analog_white.xml  clock_lcd_digital.xml  clock_lcd_digital_blue_large.xml  clock_lcd_digital_flipClock.xml  clock_lcd_digital_red.xml  clock_lcd_digital_red_large.xml  clock_lcd_digital_white.xml  clock_lcd_digital_white_large.xml  common.xml  common_analog.xml  skin_lcd_default.xml  skin_lcd_no_picon_1.xml  skin_lcd_no_picon_1_analog.xml  skin_lcd_no_picon_2.xml  skin_lcd_no_picon_2_analog.xml  skin_lcd_picon.xml  skin_lcd_picon_1.xml  skin_lcd_picon_1_analog.xml  skin_lcd_picon_2.xml  skin_lcd_picon_2_analog.xml  skin_lcd_picon_3.xml  skin_lcd_picon_3_analog.xml  skin_lcd_picon_4.xml  skin_lcd_picon_4_analog.xml  skin_lcd_picon_5.xml  skin_lcd_picon_6.xml  skin_lcd_picon_analog.xml
data/lcd_skin255/: skin_lcd_1.xml  skin_lcd_2.xml  skin_lcd_3.xml  skin_lcd_4.xml  skin_lcd_5.xml  skin_lcd_6.xml  skin_lcd_7.xml  skin_lcd_default.xml
data/lcd_skin400/: Makefile.am  active  clock_lcd_analog.xml  clock_lcd_analog_blue.xml  clock_lcd_analog_gb.xml  clock_lcd_analog_rail.xml  clock_lcd_analog_red.xml  clock_lcd_analog_white.xml  clock_lcd_digital_blue.xml  clock_lcd_digital_blue_large.xml  clock_lcd_digital_flipClock.xml  clock_lcd_digital_red.xml  clock_lcd_digital_red_large.xml  clock_lcd_digital_white.xml  clock_lcd_digital_white_large.xml  common.xml  common_analog.xml  skin_lcd_default.xml  skin_lcd_no_picon_1.xml  skin_lcd_no_picon_1_analog.xml  skin_lcd_no_picon_2.xml  skin_lcd_no_picon_2_analog.xml  skin_lcd_picon.xml  skin_lcd_picon_1.xml  skin_lcd_picon_1_analog.xml  skin_lcd_picon_2.xml  skin_lcd_picon_2_analog.xml  skin_lcd_picon_3.xml  skin_lcd_picon_3_analog.xml  skin_lcd_picon_4.xml  skin_lcd_picon_4_analog.xml  skin_lcd_picon_5.xml  skin_lcd_picon_6.xml  skin_lcd_picon_analog.xml
data/rc_models/: Makefile.am  dmmadv.xml  et6x00.xml  et7x00.xml  et9x00.xml  formuler1.xml  hd1100.xml  hd2400.xml  rc-14.xml  rc-9.xml  rc_models.cfg  vu.xml  vuduo2.xml  vuultimo.xml  xp1000.xml
data/skin_default/: Makefile.am
lib/: Makefile.am
lib/base/: .gitignore  (+88 more)
main/: .cvsignore  .gitignore  Makefile.am  bsod.cpp  bsod.h  enigma-dvbtest.cpp  enigma-gdi.cpp  enigma-gui.cpp  enigma-playlist.cpp  enigma-scan.cpp  enigma.cpp  version_info.cpp  version_info.h  xmlgenerator.cpp  xmlgenerator.h
po/: .cvsignore  LINGUAS  Makefile  Makefile.am  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+169 more)
(+2336 files in other folders)
